30-tools/test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: keycloak
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: test.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
  tls:
    - hosts:
        - test.check-consulting.net
      secretName: test-tls
